--- a/EDA_proj.ipynb
+++ b/EDA_proj.ipynb
@@ -292,6 +292,30 @@
     "\n",
     "print(\"The parameter p for the graph: \", p(G))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello :)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello :)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
